Fix the spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 	--font-size-medium: 16px;
 	--font-size-large: 24px;
 	--font-size-small: 14px;
-	--line-height: 21px;
+	--line-height: 150%;
 	--letter-spacing: 0px;
 	--spacing-xl: 16px; /*  200 */
 	--spacing-l: 12px; /*  150 */
